--- a/assets/css/buttons/base.less
+++ b/assets/css/buttons/base.less
@@ -66,15 +66,24 @@ a {
     border-color: #51a7e8;
   }
 
-  i {
+  i,
+  span {
     display: inline-block;
+    line-height: 1;
+    white-space: pre;
+    vertical-align: top;
+  }
+
+  i {
+    height: 14px;
+    padding: 2px 0;
     font-size: 14px;
-    vertical-align: middle;
   }
 
   span {
+    height: 11px;
+    padding: 3px 0 4px;
     font-size: 11px;
-    vertical-align: middle;
   }
 }
 .count {
@@ -140,10 +149,14 @@ a {
     padding: 0 10px;
 
     i {
+      height: 20px;
+      padding: 3px 0;
       font-size: 20px;
     }
 
     span {
+      height: 13px;
+      padding: 6px 0 7px;
       font-size: 13px;
     }
   }
